--- a/about.html
+++ b/about.html
@@ -56,19 +56,19 @@
             <h2>Members</h2>
             <div class="row">
                 <div class="col-lg-4">
-                    <img src="images/user-icon/Apache.ico" alt="" class="profile">
+                    <img src="images/user-icon/dute.jpg" alt="" class="profile">
                     <h3><b>Rico Dute</b></h3>
                     <h4>Member</h4>
                     <p>"long hair ako ih"</p>
                 </div>
                 <div class="col-lg-4">
-                    <img src="images/user-icon/Batman (9).ico" alt="" class="profile">
+                    <img src="images/user-icon/duff.jpg" alt="" class="profile">
                     <h3><b>Julius Terrence Duff</b></h3>
                     <h4>Member</h4>
                     <p>"Ako si batman!"</p>
                 </div>
                 <div class="col-lg-4">
-                    <img src="images/user-icon/Another World (3).ico" alt="" class="profile">
+                    <img src="images/user-icon/josiah.jpg" alt="" class="profile">
                     <h3><b>Josiah Eucariza</b></h3>
                     <h4>Member</h4>
                     <p>"....."</p>
@@ -76,13 +76,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="images/user-icon/Avatar The Last Airbender.ico" alt="" class="profile">
+                    <img src="images/user-icon/jacky.jpg" alt="" class="profile">
                     <h3><b>Jacky Dialino</b></h3>
                     <h4>Member</h4>
                     <p>"sat"</p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/user-icon/Astronaut.ico" alt="" class="profile">
+                    <img src="images/user-icon/aics.jpg" alt="" class="profile">
                     <h3><b>Jessica Lean Dapitan</b></h3>
                     <h4>Member</h4>
                     <p>Nasa moon ako guys</p>
